z-index changes to fix some layering issues

--- a/core.css
+++ b/core.css
@@ -11,6 +11,7 @@
 	font-style: normal !important;
 	text-decoration: none !important;
 	font-variant: normal !important; /*no small caps*/
+  z-index: inherit;
 	/*display: block;*/
 }
 .crx_mouse_clicked i,em {/* makes italic text bold*/
@@ -22,12 +23,12 @@
 }
 
 .crx_mouse_clicked img {
-	z-index: 100;
-  	position: relative;
+	z-index: inherit;
+  position: relative;
 }
 
 /*background colors*/
-.cream *{
+.cream:not(img){
 	background-color: #fffdd0 !important;
 }
 
